[gd_scene load_steps=17 format=2]

[ext_resource path="res://elements/signalgen/SignalGen.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/PartSpawner.gd" type="Script" id=2]
[ext_resource path="res://ui/modules/siggen.png" type="Texture" id=3]
[ext_resource path="res://font/RNF.tres" type="DynamicFont" id=4]
[ext_resource path="res://ui/ScrollingPartBin.gd" type="Script" id=5]
[ext_resource path="res://ui/partbin_part.svg" type="Texture" id=6]
[ext_resource path="res://elements/outputs/MotorOut.tscn" type="PackedScene" id=7]
[ext_resource path="res://elements/gates/ORGate.tscn" type="PackedScene" id=8]
[ext_resource path="res://elements/gates/ANDGate.tscn" type="PackedScene" id=9]
[ext_resource path="res://ui/modules/motor_control.png" type="Texture" id=10]
[ext_resource path="res://ui/modules/or_gate.png" type="Texture" id=11]
[ext_resource path="res://ui/modules/and_gate.png" type="Texture" id=12]
[ext_resource path="res://elements/inputs/SensorIn.tscn" type="PackedScene" id=13]
[ext_resource path="res://elements/sequencer/Sequencer8.tscn" type="PackedScene" id=14]
[ext_resource path="res://elements/gates/NOTGate.tscn" type="PackedScene" id=15]
[ext_resource path="res://elements/outputs/AntennaOut.tscn" type="PackedScene" id=16]

[node name="PartsBinInner" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.772549, 0.772549, 0.772549, 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SigGen" type="TextureRect" parent="ColorRect"]
margin_right = 200.0
margin_bottom = 200.0
size_flags_horizontal = 5
size_flags_vertical = 5
texture = ExtResource( 6 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
part_scene = ExtResource( 1 )

[node name="Label" type="Label" parent="ColorRect/SigGen"]
margin_left = 28.8787
margin_top = 146.156
margin_right = 172.879
margin_bottom = 183.156
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Signal
Generator"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="ColorRect/SigGen"]
position = Vector2( 100.679, 76.3414 )
scale = Vector2( 0.063, 0.063 )
texture = ExtResource( 3 )

[node name="Sequencer8" type="TextureRect" parent="ColorRect"]
margin_top = 200.0
margin_right = 200.0
margin_bottom = 400.0
size_flags_horizontal = 5
size_flags_vertical = 5
texture = ExtResource( 6 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
part_scene = ExtResource( 14 )

[node name="Label" type="Label" parent="ColorRect/Sequencer8"]
margin_left = 28.8787
margin_top = 146.156
margin_right = 172.879
margin_bottom = 183.156
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "8-Step Sequencer"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="ColorRect/Sequencer8"]
position = Vector2( 100.679, 76.3414 )
scale = Vector2( 0.063, 0.063 )
texture = ExtResource( 3 )

[node name="MotorOut" type="TextureRect" parent="ColorRect"]
margin_top = 400.0
margin_right = 200.0
margin_bottom = 600.0
size_flags_horizontal = 5
size_flags_vertical = 5
texture = ExtResource( 6 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
part_scene = ExtResource( 7 )

[node name="Label" type="Label" parent="ColorRect/MotorOut"]
margin_left = 28.8787
margin_top = 146.156
margin_right = 172.879
margin_bottom = 183.156
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Motor Control"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="ColorRect/MotorOut"]
position = Vector2( 100.679, 76.3414 )
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 10 )

[node name="Directional Sensor" type="TextureRect" parent="ColorRect"]
margin_top = 800.0
margin_right = 200.0
margin_bottom = 1000.0
size_flags_horizontal = 5
size_flags_vertical = 5
texture = ExtResource( 6 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
part_scene = ExtResource( 13 )

[node name="Label" type="Label" parent="ColorRect/Directional Sensor"]
margin_left = 28.8787
margin_top = 146.156
margin_right = 172.879
margin_bottom = 183.156
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Directional
Sensor Input"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="ColorRect/Directional Sensor"]
position = Vector2( 100.679, 76.3414 )
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 10 )

[node name="AntennaOut" type="TextureRect" parent="ColorRect"]
margin_top = 600.0
margin_right = 200.0
margin_bottom = 800.0
size_flags_horizontal = 5
size_flags_vertical = 5
texture = ExtResource( 6 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
part_scene = ExtResource( 16 )

[node name="Label" type="Label" parent="ColorRect/AntennaOut"]
margin_left = 28.8787
margin_top = 146.156
margin_right = 172.879
margin_bottom = 183.156
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Antenna Output"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="ColorRect/AntennaOut"]
position = Vector2( 100.679, 76.3414 )
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 10 )

[node name="OrGate" type="TextureRect" parent="ColorRect"]
margin_top = 1000.0
margin_right = 200.0
margin_bottom = 1200.0
size_flags_horizontal = 5
size_flags_vertical = 5
texture = ExtResource( 6 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
part_scene = ExtResource( 8 )

[node name="Label" type="Label" parent="ColorRect/OrGate"]
margin_left = 28.8787
margin_top = 146.156
margin_right = 172.879
margin_bottom = 183.156
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "OR Gate"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="ColorRect/OrGate"]
position = Vector2( 100.679, 76.3414 )
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 11 )

[node name="AndGate" type="TextureRect" parent="ColorRect"]
margin_top = 1200.53
margin_right = 200.0
margin_bottom = 1400.53
size_flags_horizontal = 5
size_flags_vertical = 5
texture = ExtResource( 6 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
part_scene = ExtResource( 9 )

[node name="Label" type="Label" parent="ColorRect/AndGate"]
margin_left = 28.8787
margin_top = 146.156
margin_right = 172.879
margin_bottom = 183.156
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "AND Gate"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="ColorRect/AndGate"]
position = Vector2( 100.679, 76.3414 )
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 12 )

[node name="NotGate" type="TextureRect" parent="ColorRect"]
margin_top = 1400.53
margin_right = 200.0
margin_bottom = 1600.53
size_flags_horizontal = 5
size_flags_vertical = 5
texture = ExtResource( 6 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
part_scene = ExtResource( 15 )

[node name="Label" type="Label" parent="ColorRect/NotGate"]
margin_left = 28.8787
margin_top = 146.156
margin_right = 172.879
margin_bottom = 183.156
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "NOT Gate"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="ColorRect/NotGate"]
position = Vector2( 100.679, 76.3414 )
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 12 )

[connection signal="gui_input" from="ColorRect" to="ColorRect" method="_on_ColorRect_gui_input"]
[connection signal="gui_input" from="ColorRect/SigGen" to="ColorRect/SigGen" method="_on_Control_gui_input"]
[connection signal="mouse_entered" from="ColorRect/SigGen" to="ColorRect/SigGen" method="_on_Control_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/SigGen" to="ColorRect/SigGen" method="_on_Control_mouse_exited"]
[connection signal="gui_input" from="ColorRect/Sequencer8" to="ColorRect/Sequencer8" method="_on_Control_gui_input"]
[connection signal="mouse_entered" from="ColorRect/Sequencer8" to="ColorRect/Sequencer8" method="_on_Control_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/Sequencer8" to="ColorRect/Sequencer8" method="_on_Control_mouse_exited"]
[connection signal="gui_input" from="ColorRect/MotorOut" to="ColorRect/MotorOut" method="_on_Control_gui_input"]
[connection signal="mouse_entered" from="ColorRect/MotorOut" to="ColorRect/MotorOut" method="_on_Control_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/MotorOut" to="ColorRect/MotorOut" method="_on_Control_mouse_exited"]
[connection signal="gui_input" from="ColorRect/Directional Sensor" to="ColorRect/Directional Sensor" method="_on_Control_gui_input"]
[connection signal="mouse_entered" from="ColorRect/Directional Sensor" to="ColorRect/Directional Sensor" method="_on_Control_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/Directional Sensor" to="ColorRect/Directional Sensor" method="_on_Control_mouse_exited"]
[connection signal="gui_input" from="ColorRect/AntennaOut" to="ColorRect/AntennaOut" method="_on_Control_gui_input"]
[connection signal="mouse_entered" from="ColorRect/AntennaOut" to="ColorRect/AntennaOut" method="_on_Control_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/AntennaOut" to="ColorRect/AntennaOut" method="_on_Control_mouse_exited"]
[connection signal="gui_input" from="ColorRect/OrGate" to="ColorRect/OrGate" method="_on_Control_gui_input"]
[connection signal="mouse_entered" from="ColorRect/OrGate" to="ColorRect/OrGate" method="_on_Control_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/OrGate" to="ColorRect/OrGate" method="_on_Control_mouse_exited"]
[connection signal="gui_input" from="ColorRect/AndGate" to="ColorRect/AndGate" method="_on_Control_gui_input"]
[connection signal="mouse_entered" from="ColorRect/AndGate" to="ColorRect/AndGate" method="_on_Control_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/AndGate" to="ColorRect/AndGate" method="_on_Control_mouse_exited"]
[connection signal="gui_input" from="ColorRect/NotGate" to="ColorRect/NotGate" method="_on_Control_gui_input"]
[connection signal="mouse_entered" from="ColorRect/NotGate" to="ColorRect/NotGate" method="_on_Control_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/NotGate" to="ColorRect/NotGate" method="_on_Control_mouse_exited"]
